# mpc

./: .gitlab-ci.yml  CMakeLists.txt  README.md  crawl_planner_plugin.xml  package.xml
config/: crawl_options.ini  planner.ini
include/crawl_planner/: ConsoleUtility.h  CrawlPlanner.h  FootScheduler.h  GaitSequencer.h  MPCPlanner.h  SwingManager.h  commons.h  declarations.h  leg_bool_map.h  timer.h
src/: ConsoleUtility.cpp  CrawlPlanner.cpp  MPCPlanner.cpp  SwingManager.cpp  loggingFeatures.cpp
tests/: Point2isRightOfLine.m  arrow3.m  clockWiseSort.m  computeDynamics.m  loadFigOptions.m  plotCoM.m  plotPolygon.m  plotTrajXYconstraintCoupledMPCreplanning.m  testPlanner.cpp  testPlannerXY.cpp  testPlannerXYconstraint.cpp  testPlannerXYconstraintMPC.cpp
tests/constrainedQP_coupled/: log.txt  plotTrajXYconstraintCoupled.m  testPlannerXYconstraintCoupled  testPlannerXYconstraintCoupled.cpp
tests/constrainedQP_decoupled/: log.txt  plotTrajXYconstraintDecoupled.m  testPlannerXYconstraintDecoupled  testPlannerXYconstraintDecoupled.cpp
tests/generateGait/: generateFootSteps.cpp  plotGait.m
tests/niraj/: generateFootSteps.cpp  plotGait.m  plotPolygonNiraj.m
tests/replanning/: loadTraj.m  plotTrajXYconstraintCoupledMPCreplanning.m  testPlannerXYconstraintMPC.cpp
tests/unconstrainedQP/: plotTraj.m  testPlanner.cpp
tests/unconstrainedQP_XY/: plotTrajXY.m  testPlannerXY.cpp
