<?xml version="1.0"?>
<package>
  <name>crawl_planner</name>
  <version>0.0.1</version>
  <description>The crawl_planner package implements a simple static walking behavior
    robot </description>

  <maintainer email="hyq@advr.iit.it">HyQ Group</maintainer>

  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>dwl_msgs</build_depend>
  <build_depend>dls_planner</build_depend>
    <build_depend>dwl_terrain</build_depend>
  <build_depend>dls_controller</build_depend>
  
  <build_depend>hyq2max_ik</build_depend>
  <build_depend>hyq_ik</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>dwl_msgs</run_depend>
  <run_depend>dls_planner</run_depend>
  <run_depend>dls_controller</run_depend>
  <run_depend>hyq2max_ik</run_depend>
  <run_depend>hyq_ik</run_depend>
    <run_depend>dwl_terrain</run_depend>
  <run_depend>terrain_estimator</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <dls_planner plugin="${prefix}/planner_plugin.xml"/>
  </export>
</package>
