<?xml version="1.0"?>
<package format="2">
  <name>crawl_planner</name>
  <version>0.0.1</version>
  <description>The crawl_planner package implements a simple static walking behavior
    robot </description>


  <maintainer email="michele.focchi@iit.it">Michele Focchi</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>


    <depend>dls_planner</depend>


    <depend>dls_map_interface</depend>

    <depend>readline</depend>

    <depend>terrain_estimator</depend>
    <depend>locomotion_utils</depend>

  <depend>roscpp</depend>
  <depend>terrain_server</depend>
  <depend>dwl</depend>
  <depend>dwl_rviz_plugin</depend>
  <depend>dwl_msgs</depend>
  <depend>pluginlib</depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <dls_planner plugin="${prefix}/planner_plugin.xml"/>
  </export>
</package>
