<?xml version="1.0"?>
<package format="2">
  <name>mpc</name>
  <version>0.0.1</version>
  <description>The mpc package implements a simple static walking behavior
    robot </description>


  <maintainer email="michele.focchi@iit.it">Michele Focchi</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>readline</depend>



  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <dls_planner plugin="${prefix}/crawl_planner_plugin.xml"/>
  </export>
</package>
